<resources>
    <string name="app_name">CalorieCounter</string>>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="forgot_password_msg">We just need your registered Email Address to sen you.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="back">BACK</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your Password?</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_register">Register</string>
    <string name="btn_sign_in">Already registered? Click here!</string>
    <string name="Add">ADD</string>
    <string name="username_hint">Username</string>
    <string name="btn_new_user">New user</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="total_cal">total calories:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Food_name">name</string>
    <string name="new_name">give your new name</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="user_settings">User settings</string>
    <string name="give_the_calories">Give the calories</string>
    <string name="save">Save</string>
</resources>
