<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.NewFoodActivity">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Food_name" />

    <EditText
        android:id="@+id/edit_text_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_name"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_text_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_Description"
        android:hint="@string/give_the_calories"
        android:inputType="number" />

    <ImageView
        android:id="@+id/image_view_new_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save_food" />

    <Button
        android:id="@+id/btn_save_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_calories"
        android:text="save new food" />

    <ProgressBar
        android:id="@+id/progress_upload"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_view_new_food" />

</RelativeLayout>